CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)

SET(PROJECT_SUFFIX "")
IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(PROJECT_SUFFIX "d")
ENDIF()

# Set this here so that the child cmake doesnot need to be changed.
SET(FREEGLUT_DIR "freeglut-3.0.0")
PROJECT(OpenGL_Experiments${PROJECT_SUFFIX})

IF (CMAKE_COMPILER_IS_GNUCC)
    SET(GCC_COVERAGE_COMPILE_FLAGS "-std=c++11")
    SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
ENDIF()

OPTION(FREEGLUT_BUILD_STATIC_LIBS "Build FreeGLUT static library." OFF)
OPTION( FREEGLUT_BUILD_DEMOS "Build FreeGLUT demos." OFF )


OPTION( glew-cmake_BUILD_STATIC "Build the static glew library" OFF )
OPTION( glew-cmake_BUILD_SINGLE_CONTEXT "Build the single context glew library" OFF )

ADD_SUBDIRECTORY(${FREEGLUT_DIR})
ADD_SUBDIRECTORY(glew-2.0.0)
ADD_SUBDIRECTORY(glexperiments)